# tutsopengl

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: VAOWrapper.h  shader.h  textures.h
include/glad/: glad.h
shaders/: fragment.glsl  fragmentGr.glsl  fragmentOr.glsl  vertex.glsl
src/: glad.c
